# TF2-Monitor

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
src/: demo_indexing.rs  demos.rs  graph.rs  gui.rs  main.rs  replay.rs  settings.rs  tracing_setup.rs
src/gui/: chat.rs  demos.rs  demos_analyzed.rs  history.rs  icons.rs  killfeed.rs  player.rs  records.rs  replay.rs  server.rs  settings.rs  styles.rs
src/gui/styles/: picklist.rs
tf2_monitor_core/: Cargo.toml
tf2_monitor_core/src/: args.rs  command_manager.rs  console.rs  demo.rs  demo_analyser.rs  demos.rs  events.rs  gamefinder.rs  lib.rs  main.rs  masterbase.rs  new_players.rs  player.rs  player_records.rs  players.rs  server.rs  settings.rs  sse_events.rs  state.rs  steam.rs  steam_api.rs  web.rs
tf2_monitor_core/src/console/: commands.rs  watcher.rs
tf2_monitor_core/src/console/commands/: g15.rs  regexes.rs
tf2_monitor_core/src/demo_analyser/: progress.rs
tf2_monitor_core/src/demos/: analyser.rs
tf2_monitor_core/src/demos/analyser/: progress.rs
tf2_monitor_core/src/players/: friends.rs  game_info.rs  new_players.rs  parties.rs  records.rs  steam_info.rs
tf2_monitor_core/src/steam/: api.rs  launch_options.rs
